[metadata]
name = trbnet
version = 1.0.dev0
description = Interface to TrbNet (wrapping libtrbnet.so with ctypes)
long_description = file: README.md
long_description_content_type = text/markdown
author = Philipp Klaus
author_email = klaus@physik.uni-frankfurt.de
url = https://github.com/pklaus/pytrbnet
license = GPL
platforms = Linux
keywords = TrbNet, PyTrbNet, FPGA, low-latency, network, libtrbnet, wrapper
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: System :: Hardware :: Hardware Drivers

[options]
packages = trbnet, trbnet.core, trbnet.xmldb, trbnet.util, trbnet.epics
zip_safe = True
include_package_data = False
install_requires = 
    lxml
    click
    enum34; python_version < "3.4"

[options.entry_points]
console_scripts =
    trbcmd.py = trbnet.util.trbcmd:cli

[options.extras_require]
epics: pcaspy
